front/style.css
/* ... */
.contactHeader{
  color:var(--color);
  text-transform: uppercase;
  font-size: 2.5rem;
  letter-spacing: 0.5rem;
  font-weight: 300;
}

.logoforcontact {
  position: absolute;
  top: 0;
  right: 0;
  width: 10rem;
  padding: 1.5rem;
  opacity: 0.5;
}

.contactText{
  color: var(--secondary-color);
  font-size: 0.9rem;
  letter-spacing: 0.01rem;
  width: 40%;
  margin: 0.25rem 0;
}

.contactLabel, .description {
  color: var(--secondary-color);
  text-transform: uppercase;
  font-size: 0.625rem;
}

form {
  width: 31.25rem;
  position: relative;
  margin-top: 2rem;
  padding: 1rem 0;
}

.contactInput, textarea, .contactLabel {
  width: 40%;
  display: block;
}

placeholder, .contactInput, textarea {
  font-family: "telegrafL", sans-serif;
}

.contactInput::placeholder, textarea::placeholder {
  color: var(--primary-color);
}

.contactInput, textarea {
  color: var(--primary-color);
  font-weight: 500;
  background: var(--bg-color);
  border: none;
  border-bottom: 1px solid var(--secondary-color);
  padding: 0.5rem 0;
  margin-bottom: 1rem;
  outline: none;
}

textarea {
  resize: none;
}

.contactInput:hover, textarea:hover{
  opacity: 0.5;
}

.description {
  margin-left: 1.25rem;
}

#error, #success-msg {
  width: 40%;
  margin: 0.125rem 0;
  font-size: 0.75rem;
  text-transform: uppercase;
  color: var(--secondary-color);

}
#success-msg {
  transition-delay: 3s;
}

@media only screen and (max-width: 950px) {
  .contactHeader {
    font-size: 1.75rem;
  }
  .contactText {
    font-size: 0.7rem;
  }
  .contactInput, textarea {
    font-size: 0.65rem;
  }
  .description {
    font-size: 0.3rem;
    margin-left: 0.4rem;
  }
}

.backuptransition{
  transition: all 0.5s ease;
}

.contactText{
  font-size: 1em;
}

.showcontactbtn{
  opacity: 1;
  pointer-events: all;
}

.hidecontactbtn{
  opacity: 0;
  pointer-events: none;
}

.backupemail{
  margin-top: 1em;
}



.noBottomMargin{
  margin-bottom: 0;
}

.noTopMargin{
  margin-top: 0;
}

html, body {
  overflow-x: hidden;
}


@media (max-width:1000px){
  .exp_outer{
    width: 100%;
  }
  .expright{
    transform: translate(-50%);
  }
  .expleft{
    transform: translate(-50%);
  }
}

@media (max-width:800px){
  .tech-title{
  font-size: 3em;
  }
}

@media (max-width:750px){
  .expimagescontainer{
    display: none;
  }
  .exp_outer{
    width: 90%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (max-width:700px){
  .sectionhead{
    font-size: 3em;
  }
  .projecttext{
    font-size: 5em;
  }

}



@media (max-width:650px){
  .sectionhead{
    font-size: 5em;
  }
  .tech-title{
  font-size: 2.5em;
  }
}

@media (max-width:600px){
  .photodivtitle {
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    font-size: 4em;
  }
  .photodivtext {
    margin-left: auto;
    margin-right: auto;
    justify-items: left;
    width: 80%;
  }
  .linktophoto{
    right: 2.5em;
  }
  .tecdiv{
    display: flex;
    flex-flow: column;
    justify-content: flex-start;
  }
  .tecdivtitle {
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    margin-top: 2em;
    text-align: right;
    font-size: 4em;
    flex-direction: row-reverse;
  }
  .tecdivtext {
    margin-left: auto;
    margin-right: auto;
    text-align: right;
    width: 80%;
  }
  .linktotecario{
    left: 15.5em
  }
  .myphoto{
    width: 85%;
    filter: saturate(1) ;
  }
  .school{
    font-size: 1.6em;
  }
  .majordesc{
    font-size: 1em;
    justify-content: center;
    margin-top: 1em;
  }
  .school_major{
    margin-bottom: -1em;
  }
}

@media (max-width:500px){
  .projecttext{
    font-size: 3em;
  }
  .tecdivtitle {
    font-size: 3em;
  }
  .photodivtitle{
    font-size: 3em;
  }
  .experienceHeadText{
    font-size: 4em;
  }
  .experienceHead{
    left: 55%;
  }
  .expimagescontainer{
    display: none;
  }
  .exp_outer{
    flex-flow: column;
  }
  .job_desc{
    width: 70%;
  }
  .exp_time{
    text-align: right;
    width: 80%;
  }
}

